Réseau de neurone CNN : Oscillateur et Filtre

--- a/environment.yml
+++ b/environment.yml
@@ -8,5 +8,15 @@ dependencies:
   - numpy
   - pandas
   - pip
+  - matplotlib
+  - ipykernel
+  - scikit-learn
+  - libsndfile
+  - ffmpeg
   - pip:
     - pyo
+    - torch
+    - torchaudio
+    - torchvision
+    - torchsummary
+    - torchcodec
